--- a/.github/workflows/devbuild.yml
+++ b/.github/workflows/devbuild.yml
@@ -22,11 +22,10 @@ jobs:
         run: ./gradlew build
       - name: Remove *-dev.jar
         run: rm ./build/libs/*-dev.jar
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Rename build artifacts
+        run: mv build/libs/*.jar build/libs/ItemFrameDupe.jar
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          title: "Dev Build"
-          files: |
-            ./build/libs/*.jar
+          name: Dev Build
+          path: build/libs/ItemFrameDupe.jar
